tests/unit/default/syntax-error/095-add-pk-table-columns.x.t
---- IN ----
+PK%table(foo,bar)|
---- OUT ----
---- ERR ----
syntax: expected EOL after `...e(foo,bar)` near `|` at position 18 - at line 1
---- EXIT ----
1
